add a shell file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .idea
 *.iml
 *.class
+/out
 /unit_1_compile/ant_compile/build/
 /unit_1_compile/maven_compile/app/target/
 /unit_1_compile/terminal/build/
+/unit_2_algorithmic_tasks/app/target
