--- a/unit_3_oop/calculator/pom.xml
+++ b/unit_3_oop/calculator/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>reflections</artifactId>
             <version>0.9.12</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+        </dependency>
     </dependencies>
 </project>
