--- a/module_2/task_3/pom.xml
+++ b/module_2/task_3/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>module</artifactId>
+        <artifactId>module_2</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.com.alevel</groupId>
-    <artifactId>task3</artifactId>
+    <artifactId>task_3</artifactId>
     <packaging>jar</packaging>
 
     <properties>
@@ -26,12 +26,7 @@
             <artifactId>jgrapht-core</artifactId>
             <version>1.5.1</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>30.0-jre</version>
-            <scope>compile</scope>
-        </dependency>
+
     </dependencies>
 
 </project>
