--- a/module_2/task_2/pom.xml
+++ b/module_2/task_2/pom.xml
@@ -3,14 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>module</artifactId>
-        <groupId>org.example</groupId>
+        <artifactId>module_2</artifactId>
+        <groupId>ua.com.alevel</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ua.com.alevel</groupId>
-    <artifactId>task2</artifactId>
+    <artifactId>task_2</artifactId>
 
     <packaging>jar</packaging>
 
