--- a/module_2/pom.xml
+++ b/module_2/pom.xml
@@ -4,17 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>nix_4</artifactId>
-        <groupId>org.example</groupId>
+        <groupId>ua.com.alevel</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>module</artifactId>
+    <artifactId>module_2</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>task2</module>
-        <module>task3</module>
+        <module>task_1</module>
+        <module>task_2</module>
+        <module>task_3</module>
+        <module>module_2_app</module>
     </modules>
 
     <properties>
