--- a/module_2/module_2_app/pom.xml
+++ b/module_2/module_2_app/pom.xml
@@ -44,7 +44,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ua.com.alevel.Start</mainClass>
+                            <mainClass>ua.com.alevel.ModuleMain2</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
