--- a/module_2/pom.xml
+++ b/module_2/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.com.alevel</groupId>
-    <artifactId>module</artifactId>
+    <artifactId>module_2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
