--- a/module_3/pom.xml
+++ b/module_3/pom.xml
@@ -26,6 +26,11 @@
             <version>5.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.0-alpha5</version>
+        </dependency>
     </dependencies>
 
     <properties>
